--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>Damos los correctos actualizamientos para que su sitio suba un nuevo producto o blog.</p>
       </div>
     </div>
-    <a href="https://portafolio-maria.netlify.app/"  class="btn-verde">Portafolio</a>
+    <a href="proyectos-maria.netlify.app"  class="btn-verde">Portafolio</a>
   </section>
 
   <section class="mensaje" id="acerca">
